jars added to lib-src-main-resources