@@ -19,86 +19,79 @@
 		<module>org.cishell.streaming.prototype</module>
 		<module>org.cishell.testing.convertertester.algorithm</module>
 		<module>org.cishell.testing.convertertester.commandline</module>
-		<module>org.cishell.testing.convertertester.core.new</module>
-		<module>org.cishell.utilities.tests</module> -->
+		<module>org.cishell.testing.convertertester.core.new</module>-->
+		<module>org.cishell.utilities.tests</module> 
 	</modules>
 
-<dependencies>
+	
+	<properties>
+		<tychoVersion>0.18.1</tychoVersion>
+		<memoryOptions1>-Xms512m -Xmx1024m -XX:PermSize=256m</memoryOptions1>
+		<memoryOptions2>-XX:MaxPermSize=256m</memoryOptions2>
+	</properties>
+	<repositories>
+		<repository>
+			<id>Indigo</id>
+			<layout>p2</layout>
+			<url>http://download.eclipse.org/releases/indigo/201106220900/</url>
+			<releases>
+				<enabled>false</enabled>
+				<updatePolicy>never</updatePolicy>
+				<checksumPolicy>warn</checksumPolicy>
+			</releases>
+		</repository>
+		<repository>
+			<id>eclipse-orbit</id>
+			<layout>p2</layout>
+			<url>http://download.eclipse.org/tools/orbit/downloads/drops/R20110523182458/repository</url>
+			<releases>
+				<enabled>false</enabled>
+				<updatePolicy>never</updatePolicy>
+				<checksumPolicy>warn</checksumPolicy>
+			</releases>
+		</repository>
+	</repositories>
 
-<!-- https://mvnrepository.com/artifact/junit/junit -->
-<dependency>
-    <groupId>junit</groupId>
-    <artifactId>junit</artifactId>
-    <version>4.12</version>
-    <scope>test</scope>
-</dependency>
 
 
-</dependencies>
 	<build>
 		<plugins>
-
 			<plugin>
-				<groupId>biz.aQute.bnd</groupId>
-				<artifactId>bnd-maven-plugin</artifactId>
-				<version>4.0.0</version>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-source-plugin</artifactId>
+				<version>${tychoVersion}</version>
+				<executions>
+					<execution>
+						<id>plugin-source</id>
+						<goals>
+							<goal>plugin-source</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-maven-plugin</artifactId>
+				<version>${tychoVersion}</version>
+				<extensions>true</extensions>
+			</plugin>
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-compiler-plugin</artifactId>
+				<version>${tychoVersion}</version>
 				<configuration>
-					<bnd><![CDATA[
-
-						Bundle-SymbolicName: ${project.groupId}.${project.artifactId}
-						Bundle-Name: ${project.artifactId}
-						Bundle-ClassPath: .
-						Bundle-Version:${project.version}
-
-						]]></bnd>
-					</configuration>
-
-					<executions>
-						<execution>
-							<goals>
-								<goal>bnd-process</goal>
-							</goals>
-						</execution>
-					</executions>
-				</plugin>
-
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-jar-plugin</artifactId>
-					<version>3.0.2</version>
-					<configuration>
-						<finalName>${project.artifactId}_${project.version}</finalName>                      
-						<archive>
-							<manifestFile>src/main/resources/META-INF/MANIFEST.MF</manifestFile>
-						</archive>
-						<skipIfEmpty>true</skipIfEmpty>
-					</configuration>
-				</plugin>
-
-				<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
-				<dependency>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-surefire-plugin</artifactId>
-					<version>2.21.0</version>
-				</dependency>
-			</plugins>
-
-
-
-		</build>
-
-
-
-
-<!-- 	<build>
-		<plugins>
+					<source>1.6</source>
+					<target>1.6</target>
+				</configuration>
+			</plugin>
+			
 			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
 				<artifactId>tycho-surefire-plugin</artifactId>
 				<version>${tychoVersion}</version>
-				<configuration>
+				<!-- <configuration>
 					<dependencies>
-						<!-- <dependency>
+						<dependency>
 							<type>eclipse-feature</type>
 							<artifactId>org.cishell.environment.equinox.feature</artifactId>
 							<version>0.0.0</version>
@@ -107,12 +100,12 @@
 							<type>eclipse-feature</type>
 							<artifactId>org.cishell.reference.feature</artifactId>
 							<version>0.0.0</version>
-						</dependency> -->
-						<!-- <dependency>
+						</dependency>
+						<dependency>
 							<type>eclipse-feature</type>
 							<artifactId>org.cishell.feature</artifactId>
 							<version>0.0.0</version>
-						</dependency> -->
+						</dependency>
 					</dependencies>
 					<bundleStartLevel>
 						<bundle>
@@ -131,8 +124,8 @@
 							<autoStart>true</autoStart>
 						</bundle>
 					</bundleStartLevel>
-				</configuration>
+				</configuration> -->
 			</plugin>
 		</plugins>
 	</build>
-	< -->/project>
+</project>
